--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import ExternalLink from "../components/external-link.astro";
 <InfoLayout>
      <div class="p-4 sm:pt-8 sm:px-12 pb-20 min-h-screen flex flex-col justify-between">
           
-          <div>
+          <!-- <div>
                <H1 >How I can help? </H1>
                <p class="mt-4 md:mt-8 lg:mt-12 text-xl xl:text-2xl text-zinc-400 text-balance">
                     Interested in working together?
@@ -34,6 +34,6 @@ import ExternalLink from "../components/external-link.astro";
                <p class="text-base sm:text-lg text-zinc-500">481 8th Ave</p>
                <p class="text-base sm:text-lg text-zinc-500">New York, NY 10001</p>
                <p class="text-base sm:text-lg text-zinc-500">United States</p>
-          </div>
+          </div> -->
      </div>
 </InfoLayout>
