--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -26,9 +26,9 @@ const projects = [
 
 <InfoLayout>
      <div class="p-4 sm:pt-8 sm:px-12 pb-20 min-h-screen">
-          <H1> Projects </H1>
+          <H1> Gallery </H1>
 
-          <ul class="mt-4 sm:mt-12 grid grid-cols-1 sm:grid-cols-3 gap-16 sm:gap-8">
+          <!-- <ul class="mt-4 sm:mt-12 grid grid-cols-1 sm:grid-cols-3 gap-16 sm:gap-8">
                {projects.map((project) => (
                     <li>
                          <Image src={project.image} alt={project.title} class="aspect-[1/1.33] object-center object-cover rounded-lg shadow-lg mb-4 sm:mb-0 sm:mr-4" />
@@ -38,6 +38,6 @@ const projects = [
                          </div>
                     </li>
                ))}
-          </ul>
+          </ul> -->
      </div>
 </InfoLayout>
