--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,22 +25,22 @@ import AvailableForWork from "../components/available.astro";
 
 			<div class="p-4 sm:p-8 absolute w-full flex flex-col justify-between min-h-screen z-10">
 				<div>
-					<H1 size="large"> Nikola <br /> Tesla </H1>
+					<H1 size="default"> Asaad's <br /> Playground </H1>
 				</div>
 
 				<div>
 					<AvailableForWork className="py-4" />
 					<div class="mb-2 sm:mb-4 flex items-center justify-between">
 						<div class="flex items-center gap-4">
-							<Link href="#">Book a call</Link>
-							<Link href="/projects" variant="secondary">View recent work</Link>
+							<Link href="/blog">Blog</Link>
+							<Link href="/about" variant="secondary">About</Link>
 						</div>
 
-						<Navigation client:load>
+						<!-- <Navigation client:load>
 							<Link href="/blog" variant="secondary">Blog</Link>
 							<Link href="/about" variant="secondary">About</Link>
 							<Link href="/contact" variant="secondary">Contact</Link>
-						</Navigation>
+						</Navigation> -->
 					</div>
 				</div>
 			</div>
